backgroud for bio

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<!--comment for github-->
-        <title>Highlights by HTML5 UP</title>
+        <title>Meiling Chen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,7 +30,7 @@
 		<!-- One -->
 			<section id="one" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/banner3.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Who am I?</h2>
