changing button color and first bg

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</header>
 				<div class="container">
 					<ul class="actions special">
-						<li><a href="#one" class="button primary scrolly">Begin</a></li>
+						<li><a href="#one" class="button primary scrolly">Learn More</a></li>
 					</ul>
 				</div>
 			</section>
