--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			</section>
 
 		<!-- Four -->
-		
+		<!--
 			<section id="four" class="main">
 				<div class="container">
 					<div class="content">
@@ -470,7 +470,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
-			</section>
+			</section>-->
 		
 
 		<!-- Footer -->
