--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
                               <span class="dot" onclick="currentSlide(3)"></span>
                             </div>
 
-                        <ul class="icons-grid">
+                        <ul class="alt">
 							<li>
 								<span class="icon solid major fa-camera-retro"></span>
-								<h3>Photography</h3>
+								<h3>Music</h3>
 							</li>
 							<li>
 								<span class="icon solid major fa-pencil-alt"></span>
@@ -131,12 +131,9 @@
 							</li>
 							<li>
 								<span class="icon solid major fa-code"></span>
-								<h3>Nulla Tempus</h3>
+								<h3>Dance</h3>
 							</li>
-							<li>
-								<span class="icon solid major fa-coffee"></span>
-								<h3>Sed Feugiat</h3>
-							</li>
+							
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
