--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
 
                         <ul class="alt">
 							<li>
-								<span class="icon solid major fa-camera-retro"></span>
+								<span style="padding-top: 10%" class="icon solid major fas fa-music"></span>
 								<h3>Music</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-pencil-alt"></span>
+								<span style="padding-top: 5%" class="icon solid major fa-pencil-alt"></span>
 								<h3>Drawing</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-code"></span>
+								<span style="padding-top:5%" class="icon solid major fas fa-walking"></span>
 								<h3>Dance</h3>
 							</li>
 							
