take out social links

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 						</div>
 					</form>
 				</div>
-				<footer>
+				<!--<footer>
 					<ul class="icons">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -206,8 +206,8 @@
 				<!--	<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
 					</ul>-->
-				</footer>
-			</section>
+				<!--</footer>-->
+			<!--</section>-->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
